Added classes to h tags

--- a/theme/n21/views/lib/extended_footer.hbs
+++ b/theme/n21/views/lib/extended_footer.hbs
@@ -2,21 +2,21 @@
     <div class="container">
         <div class="row">  
             <div  class="col-md-4">        
-                <h4>Kontakt</h4>
+                <h2 class="h4">Kontakt</h2>
                 <ul>
                     <li>Allgemeine Anfragen: <a href="mailto:terhaseborg@n-21.de" target:"_blank">terhaseborg@n-21.de</a></li>
                     <li>Support Anfragen: <a href="mailto:nbc-support@netz-21.de" target:"_blank">nbc-support@netz-21.de</a></li>
                 </ul>
             </div>
             <div  class="col-md-4">        
-                <h4>Links</h4>
+                <h2 class="h4">Links</h4>
                 <ul>
                     <li><a href="/impressum" target="blank">Impressum</a></li>
                     <li><a href="https://github.com/schul-cloud/" target="_blank">GitHub</a></li>
                 </ul>
             </div>
             <div  class="col-md-4">        
-                <h4></h4>
+                <h2 class="h4"></h2>
             </div>
         </div>
     </div>
