--- a/theme/open/views/imprint/imprint.hbs
+++ b/theme/open/views/imprint/imprint.hbs
@@ -1,8 +1,8 @@
 <div class="section-imprint">
 	<h1>KOPIE - TODO: REMOVE !!!</h1>
-	<h5>
+	<h2 class="h5">
 		<strong>HPI Schul-Cloud &ndash; Hasso-Plattner-Institut f&uuml;r Digital Engineering gGmbH</strong>
-	</h5>
+	</h2>
 	<p>Prof.-Dr.-Helmert-Str. 2-3
 		<br /> 14482 Potsdam
 		<br /> Email:
@@ -11,19 +11,19 @@
 		<a href="https://schul-cloud.org" target="_blank" rel="noopener">https://schul-cloud.org</a>
 		<br /> Telefon: +49 (0)331 / 5509-0
 		<br /> Telefax: +49 (0)331 / 5509-129</p>
-	<h5>
+	<h2 class="h5">
 		<strong>Vertretungsberechtigter Gesch&auml;ftsf&uuml;hrer:</strong>
-	</h5>
+	</h2>
 	<p>Prof. Dr. Christoph Meinel
 		<br /> Registergericht: Amtsgericht Potsdam, Registernummer: HRB 12184
 		<br /> Inhaltlich Verantwortlich gem&auml;&szlig; &sect; 6 MDStV: Prof. Dr. Christoph Meinel</p>
-	<h5>
+	<h2 class="h5">
 		<strong>Redaktion:</strong>
-	</h5>
+	</h2>
 	<p>Hasso Plattner Institut</p>
-	<h5>
+	<h2 class="h5">
 		<strong>Rechtliche Hinweise:</strong>
-	</h5>
+	</h2>
 	<p>
 		Die HPI Schul-Cloud ist ein nicht kommerzielles Pilotprojekt, welches vom HPI in Kooperation mit dem nationalen
 		Excellence-Schulnetzwerk MINT EC (<a href="https://www.mint-ec.de/" target="_blank"
@@ -48,13 +48,13 @@
 		HPI-Website sind durch das Copyright geschützt. Die Weiterverwendung von Informationen und Daten ist nur nach
 		unserer Zustimmung zulässig. Wir wünschen Ihnen einen informativen Aufenthalt auf unseren Websites und freuen uns
 		über Vorschläge, Wünsche oder Kritik zur HPI Schul-Cloud.</p>
-	<h4 id="data_security">
+	<h2 class="h4" id="data_security">
 		<strong>Datenschutzerkl&auml;rung</strong>
-	</h4>
+	</h2>
 	<p>Hinweise zum Datenschutz entnehmen Sie bitte folgender Seite.</p>
-	<h5>
+	<h2 class="h5">
 		<strong>Privatsph&auml;re und Datenschutz</strong>
-	</h5>
+	</h2>
 	<p>Mit der HPI Schul-Cloud eröffnet das Hasso-Plattner-Institut (HPI) die Möglichkeit, diverse Online-Lernangebote
 		über eine Weboberfläche zu nutzen und fördert ein vernetztes Lernen und Arbeiten auf allen Ebenen der Schule. Alle
 		Nutzer/innen – Schüler/innen bzw. Lehrkräfte – erhalten einen eigenen Zugang zur HPI Schul-Cloud. Über diesen können
@@ -67,14 +67,14 @@
 		Anmeldung gehen die Informationen über die Art, den Zweck, die Verarbeitung und Nutzung der erhobenen Daten sowie
 		die Zustimmung zu den Nutzungsbedingungen voraus. Der Schutz Ihrer Daten sowie die rechtmäßige Erhebung,
 		Verarbeitung und Nutzung ist uns besonders wichtig.</p>
-	<h5>
+	<h2 class="h5">
 		<strong>1. Verantwortliche Stelle</strong>
-	</h5>
+	</h2>
 	<p>Verantwortliche Stelle für Verarbeitung Ihrer personenbezogenen Daten ist die Schule, der Sie angehören oder der
 		Schulträger. Ihre Schule oder der Schulträger ist beauftragende Stelle und obere Aufsichtsbehörde.</p>
-	<h5>
+	<h2 class="h5">
 		<strong>2. Erhebung personenbezogener Daten</strong>
-	</h5>
+	</h2>
 	<p>Gem. Art. 4 Nr. 1 der europäischen Datenschutz-Grundverordnung (DS-GVO) beschreiben personenbezogene Daten
 		Einzelangaben über persönliche oder sachliche Verhältnisse einer bestimmten oder – ohne besondere Schwierigkeiten
 		bestimmbaren – natürlichen Person (Betroffene/r). Zu diesen Informationen gehören vor allem Details, die
@@ -115,27 +115,27 @@
 	<p>Die Löschung der gespeicherten Daten erfolgt innerhalb von 7 Tagen nach Zugang des Widerrufs der
 		Einwilligungserklärung, am Ende des laufenden Schuljahres, bei Verlassen der Schule, bei schuljahresübergreifenden
 		Projekte bei Projektende, sowie bei Beendigung des HPI Schul-Cloud-Projekts.</p>
-	<h5>
+	<h2 class="h5">
 		<strong>3. Verarbeitung und Nutzung personenbezogener Daten</strong>
-	</h5>
+	</h2>
 	<p>Sofern nicht explizit anderweitig gekennzeichnet werden die erhobenen Daten ausschließlich dazu genutzt, um die
 		Bereitstellung und Funktion der HPI Schul-Cloud und der ihr angeschlossenen Dienste zu ermöglichen.</p>
 	<p>Eine darüberhinausgehende Nutzung erfolgt lediglich im Rahmen des Forschungsvorhabens. Hier werden statistische
 		Daten, wie z. B. die Anzahl der Klicks für die Weiterentwicklung der HPI Schul-Cloud genutzt. Die Auswertung erfolgt
 		ausschließlich auf Basis pseudonymisierter Daten, sodass Rückschlüsse auf die betroffene Person ausgeschlossen bzw,
 		wesentlich erschwert werden.</p>
-		<h5>
+		<h2 class="h5">
 		<strong>3.1 Datenverarbeitung bei Newsletter-Bestellungen</strong>
-	</h5>
+	</h2>
 	<p>Wenn Sie sich für unseren Newsletter anmelden, benötigen wir Ihre E-Mail-Adresse, weil wir Ihnen den Newsletter sonst nicht schicken können. Alle weiteren Angaben sind optional. Ihre Daten werden nicht an Dritte weitergegeben, und wir nutzen sie nur für den Versand unseres Newsletters. Sie erhalten zunächst eine E-Mail mit einem Link, auf den Sie klicken müssen, um zu bestätigen, dass Sie den Newsletter erhalten wollen („Double-Opt-In“). So verhindern wir, dass jemand in Ihrem Namen den Newsletter bestellt. Außerdem speichern wir Ihre Anmeldung für den Newsletter und Ihre Bestätigung, um nachweisen zu können, dass Sie sich angemeldet haben. Zum Zweck der Zusendung des Newsletters speichern wir Ihre Daten bis zum Widerruf der Einwilligung oder bis zur endgültigen Einstellung des Newsletters; zum Zweck der Kundenbetreuung löschen wir Ihre Daten, sobald Sie widersprechen. Wenn Sie Ihre Newsletter-Anmeldung nicht bestätigen, löschen wir Ihre Daten nach 24 Stunden. Bitte bestätigen Sie Ihre Anmeldung („Double-Opt-In“) daher innerhalb von 24 Stunden, sonst müssen Sie sich noch einmal anmelden. Auf Ihre Daten haben unsere Kommunikations-Abteilung und unser Kundenservice Zugriff, bei Bedarf die Rechtsabteilung.</p>
 	<p>Als Newsletter Software wird Newsletter2Go verwendet. Ihre Daten werden dabei an die Newsletter2Go GmbH übermittelt. Newsletter2Go ist es dabei untersagt, Ihre Daten zu verkaufen und für andere Zwecke, als für den Versand von Newslettern zu nutzen. Newsletter2Go ist ein deutscher, zertifizierter Anbieter, welcher nach den Anforderungen der Datenschutz-Grundverordnung und des Bundesdatenschutzgesetzes ausgewählt wurde.</p>
 	<p>Weitere Informationen finden Sie hier: https://www.newsletter2go.de/informationen-newsletter-empfaenger/</p>
 	<p>Für die Verarbeitung zum Zweck der Zusendung des Newsletters ist Rechtsgrundlage Art. 6 Abs. 1 UAbs. 1 Buchstabe a DSGVO. Für die Verarbeitung zum Zweck des Nachweises der Einwilligung sind Rechtsgrundlage Art. 6 Abs. 1 UAbs. 1 Buchstabe c i.V.m. Art. 5 Abs. 2 DSGVO, Art. 7 Abs. 1 DSGVO und Art. 24 Abs. 1 DSGVO sowie Art. 6 Abs. 1 UAbs. 1 Buchstabe f DSGVO. Für die Verarbeitung zum Zweck der Kundenbetreuung ist Rechtsgrundlage Art. 6 Abs. 1 UAbs. 1 Buchstabe f DSGVO. Berechtigtes Interesse bei Verarbeitung auf der Basis von Art. 6 Abs. 1 UAbs. 1 Buchstabe f DSGVO sind die Förderung des Absatzes unserer Produkte und Dienstleistungen, entsprechende Werbung sowie der Nachweis Ihrer Einwilligung, d.h. die Verteidigung gegen Rechtsansprüche.</p>
 	<p>Wir verwenden in unseren Newslettern zudem marktübliche Technologien, mit denen Ihre Interaktionen mit den Newslettern gemessen werden (z. B. Öffnung der E-Mail, angeklickte Links, Abmeldungen, ungefährer Ort laut IP-Adresse). Diese Daten nutzen wir in pseudonymer Form für allgemeine statistische Auswertungen sowie zur Optimierung und Weiterentwicklung unserer Inhalte und unsere Kommunikation mit Ihnen. Dies geschieht mit Hilfe von kleinen Grafiken, die in die Newsletter eingebettet sind (sogenannte Pixel). Die Daten werden ausschließlich pseudonymisiert erhoben und zudem nicht mit Ihren weiteren personenbezogenen Daten verknüpft. Rechtsgrundlage hierfür ist unser vorgenanntes berechtigtes Interesse gem. Art. 6 Abs. 1 S. 1 lit. f DSGVO. Wir wollen über unseren Newsletter für Sie möglichst relevante Inhalte teilen und besser verstehen, wofür sich die Leser tatsächlich interessieren. Wenn Sie die Analyse des Nutzungsverhaltens nicht wünschen, können Sie die Newsletter abbestellen oder Grafiken in Ihrem E-Mail-Programm standardmäßig deaktivieren.</p>
 	
-	<h5>
+	<h2 class="h5">
 		<strong>4. Cookies</strong>
-	</h5>
+	</h2>
 	<p>Die HPI Schul-Cloud verwendet Cookies, d. h. kleine Dateien, die auf Ihrem Datenträger gespeichert werden und
 		spezifische Einstellungen und Daten für den Austausch mit unserem System über Ihren Browser speichern. Durch die
 		Nutzung von Session-Cookies, die verfallen, sobald Sie Ihren Browser schließen, gewährleisten wir eine effiziente
@@ -147,15 +147,15 @@
 		auf bestimmte Websites beschränken oder Ihren Browser so einstellen, dass Sie informiert werden, sobald ein Cookie
 		gesendet wird. Sie können Cookies auch löschen. Bitte beachten Sie jedoch, dass Sie die HPI Schul-Cloud nicht nutzen
 		können, wenn Sie die Speicherung von Session-Cookies grundlegend ablehnen.</p>
-	<h5>
+	<h2 class="h5">
 		<strong>5. Logdateien</strong>
-	</h5>
+	</h2>
 	<p>Bei jedem Besuch der HPI Schul-Cloud werden von Ihrem Internetbrowser automatisch Nutzungsdaten übermittelt und in
 		sogenannten Logdateien ausschließlich pseudonymisiert gespeichert, sodass keine personenbezogenen Daten wie
 		IP-Adressen enthalten sind.</p>
-	<h5>
+	<h2 class="h5">
 		<strong>6. Webanalysen mit Matomo</strong>
-	</h5>
+	</h2>
 	<p>Um die HPI Schul-Cloud kontinuierlich nutzungsgerecht zu verbessern, verwenden wir die Open Source
 		Webanalyse-Software Matomo. Über diese erhalten wir Berichte über die Anzahl der Nutzer/innen. Die Analysen erfolgen
 		ohne Weitergabe von Daten an Dritte.</p>
@@ -176,9 +176,9 @@
 		besuchen, müssen Sie den Opt-out-Cookie auf den unterschiedlichen Computern bzw. in den verschiedenen Browsern
 		aktivieren. Weitere Informationen über Matomo erhalten Sie unter: <a href="https://matomo.org/" target="_blank"
 			rel="noopener">https://Matomo.org/</a>.</p>
-	<h5>
+	<h2 class="h5">
 		<strong>7. Weitergabe von Daten</strong>
-	</h5>
+	</h2>
 	<p>Ihre persönlichen Daten werden vom HPI geschützt. Das HPI gibt keine personenbezogenen Daten an Dritte weiter, es
 		sei denn, die Weitergabe erfolgt in Erfüllung einer gesetzlichen Verpflichtung (z. B. im Rahmen von strafrechtlichen
 		Ermittlungen). In diesem Falle werden nur solche Informationen weitergegeben, zu denen Ihre Schule und das HPI
@@ -191,9 +191,9 @@
 		den Inhalte-Anbietern keinerlei Rückschlüsse auf die realen Nutzer/innen der HPI Schul-Cloud zulassen. Die
 		pseudonymisierten Daten über die Nutzung digitaler Angebote (bspw. Testfragen) können von den Inhalte-Anbietern
 		anonymisiert ausgewertet und zur Verbesserung ihrer Inhalte und Produkte eingesetzt werden.</p>
-	<h5>
+	<h2 class="h5">
 		<strong>8. Ihre Rechte</strong>
-	</h5>
+	</h2>
 	<p>Auf Grundlage der DS-GVO haben Sie das Recht auf Auskunft, Berichtigung, Sperrung oder Löschung Ihrer gespeicherten
 		Daten.</p>
 	<p>Sie haben jederzeit das Recht auf unentgeltliche Auskunft über Ihre gespeicherten personenbezogenen Daten, deren
