--- a/theme/open/views/lib/extended_footer.hbs
+++ b/theme/open/views/lib/extended_footer.hbs
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-				<h4>Kontakt</h4>
+				<h2 class="h4">Kontakt</h2>
 				<ul>
 					<li>Allgemeine Anfragen: <a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a></li>
 					<li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">inhalte@schul-cloud.org</a></li>
@@ -11,7 +11,7 @@
 				</ul>
 			</div>
 			<div class="col-md-4">
-				<h4>Links</h4>
+				<h2 class="h4">Links</h2>
 				<ul>
 					<li><a href="/impressum" target="_blank" rel="noopener">Impressum</a></li>
 					<li><a href="/impressum#data_security" target="_blank" rel="noopener">Datenschutzerklärung</a></li>
@@ -19,7 +19,7 @@
 				</ul>
 			</div>
 			<div class="col-md-4">
-				<h4>Mobile App</h4>
+				<h2 class="h4">Mobile App</h2>
 				<div class="android-app">
 					<a
 						href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
