--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -160,7 +160,7 @@
     <p>Wir möchten uns ganz herzlich für die tolle Zusammenarbeit und das große Engagement unserer Pilotschullehrkräfte
         bedanken!</p>
     
-    <h4>Bildungswissenschaftliche Begleitung</h4>
+    <h2 class="h4">Bildungswissenschaftliche Begleitung</h2>
     <p>Zur pädagogisch-didaktischen Unterstützung des Projekts im Sinne der Entwicklung von Beispielen für die
         Unterrichtsgestaltung
         mit verfügbarem digitalen Lernmaterial aus der HPI Schul-Cloud und dem Erkenntnisgewinn über die digitale
@@ -197,7 +197,7 @@
         </div> <!-- .row.embed-pdf-row -->
     </div> <!-- .container.embed-pdf -->
     
-    <h4>Veröffentlichungen</h4>
+    <h2 class="h4">Veröffentlichungen</h2>
     <div class="container embed-pdf">
         <div class="row embed-pdf-row">
             <div class="single-pdf col-xs-12 col-md-3" data-pdf="/other/pdf/Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.pdf">
@@ -345,7 +345,7 @@
                     2018)</a></li>
         </ul>
         <br />
-        <h4>Unsere Auszeichnungen</h4>
+        <h2 class="h4">Unsere Auszeichnungen</h2>
         <div class="container embed-award">
             <div class="row">
                 <div class="single-award col-xs-12 col-md-3">
