--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -55,7 +55,7 @@
     <br />
 
     <h3>Landesinitiativen</h3>
-	<h5>Niedersächsische Bildungscloud</h5>
+	<h4 class="h5">Niedersächsische Bildungscloud</h4>
     <p>Seit Februar 2018 kooperiert das Projekt HPI Schul-Cloud mit der niedersächsischen Bildungscloud der <a target='_blank' rel='noopener' href='http://www.n-21.de'>Landesinitiative n-21</a>. 
 	Die Projektschulen der Niedersächsischen Bildungscloud werden an die HPI Schul-Cloud angebunden und können diese
         mit einer individualisierten Oberfläche nutzen. Die Kooperation ermöglicht einen engen Erfahrungsaustausch, von dem
@@ -63,7 +63,7 @@
         effizient eingesetzt werden kann. Weitere Informationen zu der Kooperation mit der niedersächsischen Bildungscloud
         können Sie hier einsehen: <a target='_blank' rel='noopener' href='https://hpi.de/pressemitteilungen/2018/digitalisierung-niedersaechsische-bildungscloud-und-bundesweite-schul-cloud-starten-kooperation-auf-der-didacta.html'>Pressemitteilung vom Februar 2018</a>
     </p>    
-	<h5>Schul-Cloud Brandenburg</h5>
+	<h3 class="h5">Schul-Cloud Brandenburg</h3>
 	<p>
 	Seit dem Frühjahr 2019 kooperieren wir neben dem Land Niedersachsen auch mit Brandenburg. Vom 1. August 2019 bis zum 31. Juli 2021 läuft das Pilotprojekt, in dem 51 Schulen aus dem Programm "medienfit" die HPI Schul-Cloud nutzen und in ihren Schulalltag einbeziehen. Drei weitere brandenburgische Schulen, die gleichzeitig im Programm "medienfit" und im MINT-EC-Netzwerk sind, werden ebenfalls einbezogen. Für die Schul-Cloud Brandenburg wird wie in Niedersachsen eine individualisierte Oberfläche zur Verfügung gestellt. Die Steuerung des Vorhabens liegt beim MBJS, die Projektkoordinierung  bei der DigitalAgentur Brandenburg (DABB) unter dem Dach der ILB. Die technische Projektleitung übernimmt das HPI, die pädagogische Leitung das Landesinstitut für Schule und Medien (LISUM).
 	</p>
@@ -73,7 +73,7 @@
 	</p>
     <br />
 
-    <h2 class="h3">Inhalteanbieter</h2>
+    <h3 class="h3">Inhalteanbieter</h3>
     <p>Wir freuen uns über Ihre Anfragen unter <a href="mailto:inhalte@schul-cloud.org">inhalte@schul-cloud.org</a>.</p>
 
     <h3 class="h4">Entwickler, Informatik AGs, ...</h3>
@@ -91,7 +91,6 @@
     <p>
         Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
         <br />
-        <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" rel="noopener" target="_blank">Web Developer (m/w/d) im Projekt HPI Schul-Cloud</a>
-		
+        <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" rel="noopener" target="_blank">Web Developer (m/w/d) im Projekt HPI Schul-Cloud</a>	
     </p>
 </section>
