--- a/theme/brb/views/authentication/home.hbs
+++ b/theme/brb/views/authentication/home.hbs
@@ -11,10 +11,10 @@
 
             <section class="card">
                 <div class="card-block">
-                    <h4>Herzlich Willkommen bei der Schul-Cloud Brandenburg!</h4>
+                    <h2 class="h4">Herzlich Willkommen bei der Schul-Cloud Brandenburg!</h2>
                     <p>„Das Lernen mit digitalen Medien ist die Herausforderung mit der größten Dynamik. Dazu braucht es eine leistungsfähige, digitale Infrastruktur. Zu den wichtigsten Vorhaben gehört die am Hasso-Plattner-Institut entwickelte Schul-Cloud. Sie soll die Schulen des Landes vernetzen, so dass Lehrkräfte, Schülerinnen und Schüler jederzeit und überall Zugang zu Lern- und Lehrmaterialien haben. Die professionelle zentrale Wartung für alle Schulen verringert deutlich den Verwaltungs- und Betreuungsaufwand. Wir versprechen uns von der Schul-Cloud einen deutlichen Schub in der digitalen Bildung und freuen uns auf den Start des Projekts.“ - Bildungsministerin Britta Ernst bei der Eröffnungsveranstaltung am 2. Mai 2019.</p>
 					<p>Das Land Brandenburg pilotiert die vom Hasso-Plattner-Institut entwickelte Schul-Cloud mit zunächst 51 Schulen. Hinzu kommen drei Schulen aus dem HPI/MINT-EC-Projekt. Die Pilotierung erfolgt in den Schuljahren 2019/2020 und 2020/2021.</p>
-					<h4>Sie setzt besondere Schwerpunkte bei der</h4>
+					<h2 class="h4">Sie setzt besondere Schwerpunkte bei der</h2>
 					<ul>
 						<li>Verzahnung der Schul-Cloud mit dem im MBJS entwickelten Online-Schulverwaltungsprogramms weBBschule,</li>
 						<li>Bezugnahme auf den in Brandenburg gültigen Rahmenlehrplan 1-10 (einschl. der Nutzung von bereits existierenden offenen Schnittstellen zum RLP online),</li>
@@ -22,7 +22,7 @@
 						<li>Einbindung von Fortbildungsmodulen (Blended-Learning).</li>
 					</ul>
 					<p>Grundsätzliche Alleinstellungsmerkmale der HPI-Entwicklung sind ihre Prozessorientierung, Skalierbarkeit und damit zukunftsgerichtete Nachhaltigkeit.</p>
-					<h4>Die HPI Schul-Cloud-Entwicklung zeichnet sich aus durch</h4>
+					<h2 class="h4">Die HPI Schul-Cloud-Entwicklung zeichnet sich aus durch</h2>
 					<ul>
 						<li>eine konsequente Nutzung von Open Source Lösungen,</li>
 						<li>eine durchgängig nutzerzentrierte Entwicklung,</li>
@@ -37,16 +37,16 @@
 						Mehr Informationen: <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Beschreibung-der-HPI-Schul-Cloud.pdf" target="_blank" rel="noopener">Kurzbeschreibung "Die HPI Schul-Cloud" (.pdf)</a>
 					</p>
 
-					<h4>Niedrigschwelliger Zugang zu digitalen Unterrichtsinhalten</h4>
+					<h2 class="h4">Niedrigschwelliger Zugang zu digitalen Unterrichtsinhalten</h2>
 					<p>Eine moderne Lehr- und Lerninfrastruktur ist unabdingbar, um die digitale Transformation im Bildungssektor zum Erfolg zu führen und Kinder schon im Schulalter optimal auf das Leben in einer zunehmend digitalen Gesellschaft vorzubereiten.</p>
 
-					<h4>Die Grundidee der Schul-Cloud Brandenburg</h4>
+					<h2 class="h4">Die Grundidee der Schul-Cloud Brandenburg</h2>
 					<p>Webbasierte Anwendungen sowie Rechenressourcen und Speichermöglichkeiten per Cloud Computing ermöglichen einen effizienten Zugriff auf zeitgemäße IT-Dienste für einen großen Kreis an Nutzerinnen und Nutzern.</p>
 					<p>Der spontane, bedarfsgerechte Einsatz in jedem beliebigen Unterrichtsfach wird dadurch erleichtert. Die aufwendige Installation von Software auf einzelnen Endgeräten der Nutzerinnen und Nutzer entfällt. Eine digitale Kommunikation und der Austausch von digitalen Materialien werden ermöglicht.</p>
 					<p>Sämtliche Programme und das Benutzerprofil werden via Internet zur Verfügung gestellt. Um Zugang zu den digitalen Inhalten zu erlangen, braucht es lediglich einen Internetzugang, webfähige Anzeige- und Eingabegeräte, einen modernen Webbrowser sowie entsprechende Berechtigungen.</p>
 					<p>Die Bereitstellung der Schul-Cloud Brandenburg ist ein entscheidender Schritt, um die Nutzung digitaler Medien in der Schule flächendeckend voranzubringen.</p>
 
-					<h4>Vorteile der Schul-Cloud Brandenburg</h4>
+					<h2 class="h4">Vorteile der Schul-Cloud Brandenburg</h2>
 					<ul>
 						<li>Zeit- und ortsunabhängiger Zugang zu einem großen Angebot an digitalen Lerninhalten</li>
 						<li>Austausch digitaler, selbst erstellter Materialien</li>
@@ -69,7 +69,7 @@
 
 			<section id="partner" class="card">
 				<div class="card-block">
-					<h4 class="card-title">Projektdurchführung</h4>
+					<h2 class="h4 card-title">Projektdurchführung</h2>
 					<div class="card-text partner-img">
 						<a href="https://hpi.de/open-campus/hpi-initiativen/schul-cloud.html" target="_blank" rel="noopener">
 							<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid">
