--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -53,9 +53,9 @@
 
                     <div class="row mb-2">
                         <div class="col-sm-12 no-padding">
-                            <h4>
+                            <h2 class="h4">
                                 Einverständniserklärung einholen
-                            </h4>
+                            </h2>
                             {{#if schoolUsesLdap}}
                                 <strong>Schüler loggen sich in Anwesenheit eines Erziehungberechtigten ein</strong>
 
