--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -150,7 +150,7 @@
 
                      <section id="jobs" class="card">
                         <div class="card-block">
-                            <h4 class="card-title">Stellenausschreibungen</h4>
+                            <h2 class="h4 card-title">Stellenausschreibungen</h2>
                             <div class="form-group">
                                 Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
                             </div>
@@ -160,7 +160,7 @@
 
                     <section id="newsletter" class="card">
                         <div class="card-block">
-                            <h4 class="card-title">Newsletter</h4>
+                            <h2 class="h4 card-title">Newsletter</h2>
                             <div class="form-group">
                                 Alle Neuigkeiten rund um die HPI Schul-Cloud bequem in Ihrem Postfach:
                             </div>
@@ -170,7 +170,7 @@
 
                     <section id="blogfeed" class="card">
                         <div class="card-block">
-                            <h4 class="card-title">HPI Schul-Cloud Blog</h4>
+                            <h2 class="h4 card-title">HPI Schul-Cloud Blog</h2>
                             <ul class="list-group list-group-flush">
                                 {{#each blogFeed}}
                                     <li class="list-group-item">
@@ -189,7 +189,7 @@
 
                     <section id="partner" class="card">
 						<div class="card-block">
-							<h4 class="card-title">Projektdurchführung</h4>
+							<h2 class="h4 card-title">Projektdurchführung</h2>
 							<div class="card-text partner-img">
 								<a href="https://hpi.de/open-campus/hpi-initiativen/schul-cloud.html" target="_blank" rel="noopener">
 									<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid">
@@ -204,70 +204,6 @@
 						</div>
 					</section>
                 </aside>
-            </div>
-
-            <section id="jobs" class="card">
-                <div class="card-block">
-                    <h2 class="card-title h4">Stellenausschreibungen</h2>
-                    <div class="form-group">
-                        Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
-                    </div>
-                    <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/frontend-web-developer-mwd-im-projekt-hpi-schul-cloud.html"
-                        rel="noopener" target="_blank">Frontend Web Developer</a></br>
-                    <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html"
-                        rel="noopener" target="_blank">Web Developer</a>
-                </div>
-            </section>
-
-            <section id="newsletter" class="card">
-                <div class="card-block">
-                    <h2 class="card-title h4">Newsletter</h2>
-                    <div class="form-group">
-                        Alle Neuigkeiten rund um die HPI Schul-Cloud bequem in Ihrem Postfach:
-                    </div>
-                    <a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank"
-                        class="btn btn-block btn-primary">Newsletter abonnieren</a>
-                </div>
-            </section>
-
-            <section id="blogfeed" class="card">
-                <div class="card-block">
-                    <h2 class="card-title h4">HPI Schul-Cloud Blog</h2>
-                    <ul class="list-group list-group-flush">
-                        {{#each blogFeed}}
-                        <li class="list-group-item">
-                            <a href="{{this.link}}" target="scblog">
-                                {{this.title}}
-                            </a></br>
-                            <small>von {{this.dc:creator}} am {{this.pubDate}}</small>
-                        </li>
-                        {{else}}
-                        <p>Der Blog ist derzeit deaktiviert! Das HPI Schul-Cloud Team kümmert sich darum.</p>
-                        {{/each}}
-                    </ul>
-                    <a href="https://blog.schul-cloud.org" target="scblog" class="card-link pull-right pt-1">weitere
-                        Artikel <i class="fa  fa-angle-double-right" aria-hidden="true"></i></a>
-                </div>
-            </section>
-
-            <section id="partner" class="card">
-                <div class="card-block">
-                    <h2 class="card-title h4">Projektdurchführung</h2>
-                    <div class="card-text partner-img">
-                        <a href="https://hpi.de" target="_blank">
-                            <img src="/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid"
-                                style="padding: 20px;">
-                        </a>
-                        <a href="https://www.mint-ec.de/" target="_blank">
-                            <img src="/images/partner/mintec-logo.jpg" alt="Logo MINT-EC" class="img-fluid">
-                        </a>
-                        <a href="https://www.bmbf.de/" target="_blank">
-                            <img src="/images/partner/bmbf-logo.jpg" alt="Logo BMBF" class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-            </section>
-        </aside>
     </div>
 </div>
 {{#embed "lib/extended_footer"}}{{/embed}}
