Fix federal states and teamId params

--- a/views/teams/members.hbs
+++ b/views/teams/members.hbs
@@ -108,7 +108,7 @@
             {{#inArray "TEAM_INVITE_EXTERNAL" rolePermissions }}
                 {{#embed "lib/components/modal-form" action=inviteExternalMemberAction class="invite-external-member-modal"}}
                     {{#content "fields"}}
-                        {{> "teams/forms/form-invite-external-member" teamId=../_id roles=rolesExternal}}
+                        {{> "teams/forms/form-invite-external-member" teamId=../../_id roles=rolesExternal federalStates=../../federalStates}}
                     {{/content}}
                 {{/embed}}
             {{/inArray}}
