--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -153,6 +153,7 @@ label,
 }
 
 footer {
+	display: block;
 	.android-app {
 		margin-left:-11px;
 	}
@@ -176,7 +177,7 @@ footer {
 				.made-with-love {
 					margin-top: 8px;
 					.heart {
-						color: #b10438;
+						color: $primaryColor;
 					}
 				}
 			}
