--- a/static/styles/homepage/index.scss
+++ b/static/styles/homepage/index.scss
@@ -26,24 +26,21 @@
     }
 }
 
-.partners{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    grid-gap: var(--space-md);
-    @include media-breakpoint-down(md) {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-    }
+.grid-align-right{
+	@supports (display: grid) {
+		text-align: right;
+	}
 }
+
 .partner{
     border-radius: var(--radius-md);
     border: var(--border-width) solid var(--color-gray);
     width: 100%;
     height: 100%;
     padding: var(--space-md);
-    object-fit: contain;
+	object-fit: contain;
 }
+
 video-player{
     border: 1px solid var(--color-white);
 }
