--- a/static/styles/homepage/layouts.scss
+++ b/static/styles/homepage/layouts.scss
@@ -17,14 +17,16 @@
 }
 
 .grix-2x2{
-    display: grid;
-    grid-gap: var(--space-md);
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: "b c" "a d";
-    @include media-breakpoint-down(md) {
-        grid-template-areas: "a" "b" "c" "d";
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-    }
+	@supports (display: grid) {
+		display: grid;
+		grid-gap: var(--space-md);
+		grid-template-rows: 1fr 1fr;
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas: "b c" "a d";
+		@include media-breakpoint-down(md) {
+			grid-template-areas: "a" "b" "c" "d";
+			grid-template-columns: 1fr;
+			grid-template-rows: 1fr 1fr 1fr 1fr;
+		}
+	}
 }
