--- a/static/styles/homepage/sections.scss
+++ b/static/styles/homepage/sections.scss
@@ -1,3 +1,6 @@
+@import "./variables";
+
+
 .section.section-tilt{
     --color-headline: var(--color-primary);
     --color-text: var(--color-black);
@@ -25,6 +28,15 @@
 
         &::before{
             background-color: var(--color-primary)
+		}
+
+		// Duplication of the following is needed for IE Fallback
+		color: var(--color-text);
+		.section-title{
+			color: var(--color-headline);
+		}
+		a, button{
+            color: var(--color-text);
         }
     }
     &.accent{
@@ -33,6 +45,15 @@
 
         &::before{
             background-color: var(--color-accent)
+		}
+
+		// Duplication of the following is needed for IE Fallback
+		color: var(--color-text);
+		.section-title{
+			color: var(--color-headline);
+		}
+		a, button{
+            color: var(--color-text);
         }
     }
     &.dark{
@@ -41,6 +62,15 @@
 
         &::before{
             background-color: var(--color-gray-dark)
+		}
+
+		// Duplication of the following is needed for IE Fallback
+		color: var(--color-text);
+		.section-title{
+			color: var(--color-headline);
+		}
+		a, button{
+            color: var(--color-text);
         }
     }
 
