--- a/static/styles/homepage/variables.scss
+++ b/static/styles/homepage/variables.scss
@@ -27,6 +27,7 @@
     --color-white: #fff;
     --color-overlay: rgba(0, 0, 0, 0.5);
 
+	--shadow-sm: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     --shadow-md: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 
     --space-xxxxs: 0.125rem;
