--- a/static/styles/homepage/blog-card.scss
+++ b/static/styles/homepage/blog-card.scss
@@ -2,65 +2,66 @@
 @import "./variables";
 
 .blog-cards{
-    margin-top: var(--space-md);
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    @include media-breakpoint-down(md) {
-        flex-wrap: wrap;
-    }
+	margin-top: var(--space-md);
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	@include media-breakpoint-down(md) {
+		flex-wrap: wrap;
+	}
 }
 
 .blog-link{
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    padding: var(--space-md);
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+	padding: var(--space-md);
 }
 
 .blog-card{
-    border: var(--border-width) solid var(--color-gray);
-    border-radius: var(--radius-md);
-    text-align: center;
-    width: 50ch;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    position: relative;
-    overflow: hidden;
-    padding-bottom: 10px;
-    &:not(:last-of-type){
-        margin-right: var(--space-lg);
-    }
-    @include media-breakpoint-down(md) {
-        width: 100%;
-        &:not(:last-of-type){
-            margin-right: 0;
-            margin-bottom: var(--space-lg);
-        }
-    }
-    .thumbnail{
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-        margin-bottom: var(--space-sm);
-    }
-    .body{
-        padding: var(--space-sm);
-    }
-    .title{
-        font-size: 1.5rem;
-        font-weight: bold;
-    }
-    .pub-date{
-        font-size: 1rem;
-    }
-    .description{
-        flex: 1;
-    }
-    a.btn-primary.btn-outline{
-        border: 1px solid var(--color-primary);
-        color: var(--color-primary);
-        background: transparent;
-    }
+	border: var(--border-width) solid var(--color-gray);
+	border-radius: var(--radius-md);
+	text-align: center;
+	width: 50ch;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	position: relative;
+	overflow: hidden;
+	padding-bottom: 10px;
+	&:not(:last-of-type){
+		margin-right: var(--space-lg);
+	}
+	@include media-breakpoint-down(md) {
+		width: 100%;
+		&:not(:last-of-type){
+			margin-right: 0;
+			margin-bottom: var(--space-lg);
+		}
+	}
+	.thumbnail{
+		width: 100%;
+		height: 200px;
+		object-fit: cover;
+		margin-bottom: var(--space-sm);
+	}
+	.body{
+		padding: var(--space-sm);
+		flex-grow: 1;
+	}
+	.title{
+		font-size: 1.5rem;
+		font-weight: bold;
+	}
+	.pub-date{
+		font-size: 1rem;
+	}
+	.description{
+		flex: 1;
+	}
+	a.btn-primary.btn-outline{
+		border: 1px solid var(--color-primary);
+		color: var(--color-primary);
+		background: transparent;
+	}
 }
