--- a/static/styles/homepage/blog-card.scss
+++ b/static/styles/homepage/blog-card.scss
@@ -57,7 +57,7 @@
 		font-size: 1rem;
 	}
 	.description{
-		flex: 1;
+		flex-grow: 1;
 	}
 	a.btn-primary.btn-outline{
 		border: 1px solid var(--color-primary);
