--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -52,7 +52,7 @@
     top: 0;
     left: 0;
     transform: scale(0);
-    z-index: var(--layer-modal);
+    z-index: 1;
     &.show {
       transform: scale(1);
       .modal-background {
