new sections also on teams page

--- a/static/styles/about/about.scss
+++ b/static/styles/about/about.scss
@@ -27,56 +27,53 @@
     margin-bottom: 10px;
   }
   .single-pdf {
-    margin: 0 15px 15px;
     padding: 3px 6px 3px 6px;
-    border: 1px solid #d3d3d3;
-    box-shadow: 2px 2px 5px rgba(0,0,0,.1);
-    background-color: #fff;
+
     &.opened {
       border: 1px solid #b10438;
     }
-    a {
-        .single-pdf-title{
-            color: initial;
-            text-decoration: none;
-        }
+	.single-pdf-title{
+		color: initial;
+		text-decoration: none;
+	}
 
-      .single-pdf-wrapper {
-        padding: 10px;
-        height: 100%;
-      }
-      .single-pdf-thumbnail {
-        margin-top: 10px;
-        width: 100%;
-      }
-    }
+	.single-pdf-wrapper {
+		padding: 10px;
+		height: 100%;
+		box-shadow: 2px 2px 5px rgba(0,0,0,.1);
+		background-color: #fff;
+		border-radius: .25rem;
+		border: 1px solid rgba(0,0,0,.125)
+	}
+	.single-pdf-thumbnail {
+		margin-top: 10px;
+		width: 100%;
+	}
   }
 }
 
 .embed-award {
-  padding-left: 0;
-  div.row {
-    margin-bottom: 10px;
-    padding-left: 0;
-  }
-  .single-award {
-    margin: 0 15px 15px;
-    padding: 3px 6px 3px 6px;
-    border: 1px solid #d3d3d3;
-    box-shadow: 2px 2px 5px rgba(0,0,0,.1);
-    &.opened {
-      border: 1px solid #b10438;
-    }
-    .single-award-wrapper {
-      padding: 10px;
-      height: 100%;
-      a {
-        text-decoration: none;
-        .single-award-thumbnail {
-          margin-top: 10px;
-          width: 100%;
-        }
-      }
-    }
-  }
+	.single-award {
+		padding: 3px 6px 3px 6px;
+		&.opened {
+		border: 1px solid #b10438;
+		}
+		.single-award-wrapper {
+			padding: 10px;
+			height: 100%;
+			border: 1px solid #d3d3d3;
+			box-shadow: 2px 2px 5px rgba(0,0,0,.1);
+
+			a {
+				text-decoration: none;
+				.single-award-thumbnail {
+					width: 100%;
+				}
+			}
+			.single-award-title{
+				display: flex;
+				align-items: center;
+			}
+		}
+	}
 }
