--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -6,9 +6,9 @@
 					<div  class="col-md-4">
 						<h4>Kontakt</h4>
 						<ul>
-							<li>Allgemeine Anfragen: <a href="mailto:info@schul-cloud.org" target="_blank">info@schul-cloud.org</a></li>
-							<li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org" target="_blank">inhalte@schul-cloud.org</a></li>
-							<li>Datenschutz: <a href="mailto:datenschutz@schul-cloud.org" target="_blank">datenschutz@schul-cloud.org</a></li>
+							<li>Allgemeine Anfragen: <span style="white-space: nowrap;"><a href="mailto:info@schul-cloud.org" target="_blank">info@schul-cloud.org</a></span></li>
+							<li>Inhalteanbieter: <span style="white-space: nowrap;"><a href="mailto:inhalte@schul-cloud.org" target="_blank">inhalte@schul-cloud.org</a></span></li>
+							<li>Datenschutz: <span style="white-space: nowrap;"><a href="mailto:datenschutz@schul-cloud.org" target="_blank">datenschutz@schul-cloud.org</a></span></li>
 							<li><a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank">Newsletter abonnieren</a></li>
 						</ul>
 					</div>
@@ -16,7 +16,7 @@
 						<h4>Links</h4>
 						<ul>
 							<li><a href="/impressum" target="blank">Impressum</a></li>
-							<li>Datenschutzerklärung: <a href="/impressum#data_security" target="blank">HPI</a> / <a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="blank">Muster Schulen</a></li>
+							<li>Datenschutzerklärung: <br/><a href="/impressum#data_security" target="blank">HPI</a> / <a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="blank">Muster Schulen</a></li>
 							<li><a href="/team" target="blank">Team</a></li>
 							<li><a href="/partner" target="blank">Partner</a></li>
 							<li><a href="/about" target="blank">Über das Projekt</a></li>
@@ -32,7 +32,7 @@
 						</div>
 						<h4 class="card-title">Stellenausschreibungen</h4>
 						<div class="form-group">
-							Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
+							Du möchtest gerne Mitglied in unserem <span style="white-space: nowrap;">HPI Schul-Cloud</span> Team werden? Wir suchen:
 						</div>
 						<a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" rel="noopener" target="_blank">Web Developer</a>
 					</div>
