--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -179,13 +179,13 @@
                     Projektdurchführung
                 </h2>
                 <div class="partners row">
-                    <a class="col-sm" href="https://hpi.de/open-campus/hpi-initiativen/schul-cloud.html" target="_blank" rel="noopener">
+                    <a class="col-sm py-1" href="https://hpi.de/open-campus/hpi-initiativen/schul-cloud.html" target="_blank" rel="noopener">
                         <img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/hpi-logo.jpg" alt="Logo HPI" class="partner">
                     </a>
-                    <a class="col-sm" href="https://www.mint-ec.de/" target="_blank" rel="noopener">
+                    <a class="col-sm py-1" href="https://www.mint-ec.de/" target="_blank" rel="noopener">
                         <img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/mintec-logo.jpg" alt="Logo MINT-EC" class="partner">
                     </a>
-                    <a class="col-sm" href="https://www.bmbf.de/" target="_blank" rel="noopener">
+                    <a class="col-sm py-1" href="https://www.bmbf.de/" target="_blank" rel="noopener">
                         <img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/bmbf-logo.jpg" alt="Logo BMBF" class="partner">
                     </a>
                 </div>
