--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -10,10 +10,12 @@
             <h3 class="section-title center">Schulen</h3>
             <h4>Wie bewerben sich MINT-EC Schulen?</h4>
             <p>
+				Alle 316 Schulen aus dem MINT-EC-Schulnetzwerk können sich für die Teilnahme am Projekt „HPI Schul-Cloud“ anmelden. Um Pilotschule zu werden loggen Sie sich bitte mit Ihrem Profil auf der Website des MINT-EC ein und füllen Sie das Formular aus.
+				<br/><br/>
+				<a href="https://www.mint-ec.de/schulnetzwerk/hpi-schul-cloud/mitmachen/" target="_blank">Zur Anmeldung</a>
+				<br/><br/>
+				<b>Die nächsten Starttermine:</b>
                 <ul>
-                    Alle 316 Schulen aus dem MINT-EC-Schulnetzwerk können sich für die Teilnahme am Projekt „HPI Schul-Cloud“ anmelden. Um Pilotschule zu werden loggen Sie sich bitte mit Ihrem Profil auf der Website des MINT-EC ein und füllen Sie das Formular aus.
-                    <a href="https://www.mint-ec.de/schulnetzwerk/hpi-schul-cloud/mitmachen/" target="_blank">Zur Anmeldung</a>
-                    <li><b>Die nächsten Starttermine:</b></li>
                     <li>1. Schulhalbjahr 2019/2020</li>
                     <li>2. Schulhalbjahr 2019/2020</li>
                     <li>1. Schulhalbjahr 2020/2021</li>
