--- a/static/styles/homepage/index.scss
+++ b/static/styles/homepage/index.scss
@@ -8,7 +8,11 @@
         display: inline-block;
         &:not(:first-of-type){
             margin-left: var(--space-md);
-        }
+			@include media-breakpoint-down(md) {
+				margin:0;
+				display: block;
+			}
+		}
     }
     .btn-primary.btn-outline{
         border: 1px solid var(--color-primary);
@@ -30,17 +34,21 @@
 	@supports (display: grid) {
 		text-align: right;
 	}
+	@include media-breakpoint-down(md) {
+		text-align: left;
+	}
 }
 
 .partner{
-    border-radius: var(--radius-md);
     border: var(--border-width) solid var(--color-gray);
     width: 100%;
     height: 100%;
     padding: var(--space-md);
 	object-fit: contain;
+	box-shadow: var(--shadow-sm);
 }
 
 video-player{
-    border: 1px solid var(--color-white);
+	border: 1px solid var(--color-white);
+	z-index: var(--layer-page);
 }
