--- a/static/styles/homepage/login.scss
+++ b/static/styles/homepage/login.scss
@@ -1,6 +1,12 @@
+@import "./variables";
 
 // legacy css for login form
 #loginarea{
+	&:not(.demo-login){
+		border-radius: 0;
+		border: 1px solid var(--color-gray);
+		box-shadow: var(--shadow-sm);
+	}
     .btn{
         word-wrap: break-word;
         white-space: normal;
