--- a/static/styles/homepage/sections.scss
+++ b/static/styles/homepage/sections.scss
@@ -1,3 +1,4 @@
+@import '../lib/bootstrap/scss/bootstrap';
 @import "./variables";
 
 
@@ -7,10 +8,13 @@
 
     color: var(--color-text);
     padding: var(--space-xxl) var(--space-lg);
-    position: relative;
+	position: relative;
     &:first-of-type{
-        padding-top: 0;
+		padding-top: 0;
     }
+	@include media-breakpoint-down(md) {
+		padding: var(--space-xxl) var(--space-xs)
+	}
     &::before{
         content: "";
         position: absolute;
