--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -157,6 +157,9 @@ footer {
 	.android-app {
 		margin-left:-11px;
 	}
+	ul{
+		padding-left: 1.2em;
+	}
 	&.small-footer {
 
 		@include media-breakpoint-down(xs) {
