--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -23,7 +23,7 @@
 								aria-labelledby="exampleModalLongTitle" aria-hidden="true"
 							>
 								<div class="modal-dialog" style="margin-top: {{#if longDesc}} {{ longDesc }} {{else}} 20vh {{/if}}" role="document">
-									<div class="modal-content">
+									<div class="modal-content py-1">
 										<div class="modal-body">
 											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 												<i class="fa fa-times" aria-hidden="true"></i>
