--- a/static/styles/homepage/login.scss
+++ b/static/styles/homepage/login.scss
@@ -4,8 +4,8 @@
 #loginarea{
 	&:not(.demo-login){
 		border-radius: 0;
-		border: 1px solid var(--color-gray);
-		box-shadow: var(--shadow-sm);
+		border: 1px solid var(--color-gray-light);
+		box-shadow: var(--shadow-md);
 	}
     .btn{
         word-wrap: break-word;
