--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -144,7 +144,7 @@
     padding-bottom: 15px;
   }
   .person {
-    border: 1px solid #aaa;
+    border: 1px solid #d3d3d3;
     height: 150px;
     text-align: center;
 	transition: all .5s;
