change redirect during password reset

--- a/views/pwRecovery/pwRecoveryResponse.hbs
+++ b/views/pwRecovery/pwRecoveryResponse.hbs
@@ -1,6 +1,8 @@
 {{#extend "lib/simple"}}
   {{#content "page"}}
-    Dein Account wurde nicht gefunden. Bitte prüfe folgende Möglichkeiten:</br>
+    <p>Wir haben eine E-Mail an die in deinem Account hinterlegte E-Mail-Adresse gesendet.</p> <br>
+    Solltest du keine E-Mail erhalten haben, prüfe bitte folgende Möglichkeiten: </br>
+    
     <ul>
     <li>Hast du deine <b>E-Mail-Adresse korrekt</b> eingegeben?</li>
     <li>Hast du die Registrierung komplett abgeschlossen? Die Passwort-Vergessen-Funktion funktioniert erst, wenn du den Registrierungsprozess durchlaufen hast. Zu diesem gelangst du durch den <b>Registrierungslink</b>, den du von einem Lehrer oder Schuladministrator bekommen hast. Bitte wende dich an diese Personen, falls du noch keinen Link bekommen hast.</li>
